# The_Book

./: .copilot-instructions.md  .gitignore  FONTS.md  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  factory.py
config/: chronology.yaml  rules.yaml  schema.yaml  sources.yaml
data/reports/: genesis_ch1_cross_source_diff.md
data/reports/bible.ot.genesis/chapter_001/: BCE250_CE930.json  BCE250_CE930.md  CE1008_CE1225.json  CE1008_CE1225.md  CE930_CE1008.json  CE930_CE1008.md  cross_source_diff.json  cross_source_diff.md
inventory/: bible_canon.yaml
scripts/: __init__.py  build_samaritan_genesis_payload.py  build_source_diff_index.py  diff_genesis_sources.py  pull_genesis_ch1.py  pull_genesis_ch1_dss.py  pull_genesis_ch1_sefaria.py  review_genesis_ch1.py  verify_fonts.py
src/: __init__.py
src/adapters/: __init__.py  base_adapter.py  dss_adapter.py  hebrew_transcription_adapter.py  oshb_adapter.py  sefaria_adapter.py
src/analyzers/: __init__.py  date_review.py
src/core/: __init__.py  policy.py  schema.py
src/exporters/: __init__.py
src/handlers/: __init__.py  language_handlers.py
src/normalizers/: __init__.py
src/validators/: __init__.py
tests/: __init__.py  test_build_source_diff_index.py  test_date_review.py  test_diff_genesis_sources.py  test_diff_markdown_render.py  test_dss_adapter.py  test_hebrew_transcription_adapter.py  test_oshb_adapter.py  test_schema.py  test_sefaria_adapter.py
