# The_Book/pyproject.toml
# Python project configuration and dependencies

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-book"
version = "0.1.0"
description = "Global original-language canon corpus ingestion and normalization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "The Book Contributors"}
]
keywords = ["corpus", "biblical", "cuneiform", "ancient-texts", "digital-humanities"]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8",
    "lxml>=4.9",
    "requests>=2.28",
    "unicodedata2>=14.0",
    "regex>=2022.10",
    "sqlmodel>=0.0.8",
    "platformdirs>=2.6",
    "python-dateutil>=2.8",
    # Language & script detection
    "PyICU>=2.13",
    "langdetect>=1.0.9",
    "ftlangdetect>=0.0.8",
    # Font handling & validation
    "fonttools>=4.41",
    "fontconfig>=0.1",
    # Transliteration & specialized text handling
    "unidecode>=1.3",
    "epitran>=1.28",
    "unicodeit>=0.7",
    # NLP/morphology support
    "cltk>=1.1.19",
    # Library dependency for above
    "click>=8.1",
    "colorama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=5.0",
    "mypy>=1.0",
    "pytest-xdist>=3.0",
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.1",
    "sphinx-autodoc-typehints>=1.19",
]

export = [
    "pyarrow>=12.0",
    "pandas>=1.5",
]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
